# seer

./: .air.toml  .gitignore  backup.txt  go.mod  go.sum  go.work  go.work.sum  main.go  notes.txt  proposed-soln-brief.typ  proposed-technical-solution.typ  seer.toml  sync_proto.nu
.github/workflows/: release.yml
nodescraper-rs/: Cargo.toml  Cross.toml  build.rs
nodescraper-rs/.cargo/: config.toml
nodescraper-rs/src/: main.rs  scrapers.rs
nodescraper-rs/src/scrapers/: website.rs
plugins/p_seer_aisstream/: app.go  apps.go  bootstrap.go  config.go  export_map_display.go  features.go  go.mod  go.sum  ingest.go  map_data.go  map_layer.go  models.go  pages.go  pages_map.go  paths.go  stream.go  views.go
plugins/p_seer_assistant/: actions_chat.go  actions_chat_llm.go  actions_tools_website.go  app.go  apps.go  assistant_tools_declarations.go  config.go  features.go  go.mod  handlers_ws.go  models_chat.go  pages_chat.go  pages_history.go  paths.go  querypatchers.go  tools.go  views.go
plugins/p_seer_dashboard/: app.go  apps.go  config.go  features.go  go.mod  map_marker_icons.go  map_merge_ws.go  pages_home.go  paths.go  seer_dashboard_map.go  views_home.go
plugins/p_seer_deepsearch/: actions_deepsearch.go  actions_deepsearch_llm.go  app.go  apps.go  config.go  features.go  getters.go  go.mod  go.sum  handlers_control.go  handlers_deepsearch.go  models.go  pages_detail.go  pages_search.go  pages_table.go  paths.go  pipeline_control.go  querypatchers.go  views.go
plugins/p_seer_gdelt/: actions_bigquery.go  actions_gdelt_form_validate.go  actions_gdelt_ingest.go  actions_gdelt_intel_kind.go  active_workers_provider.go  app.go  apps.go  config.go  enqueue_website_scrape.go  export_map_display.go  features.go  gdelt_worker_form_layer.go  getters.go  go.mod  go.sum  handlers_gdelt_worker_pool.go  layer_map.go  layer_search.go  models.go  pages.go  pages_event_crud.go  pages_gdelt_sources.go  pages_gdelt_sources_form.go  pages_gdelt_workers.go  pages_map.go  (+4 more)
proto_src/: scraper.proto
report/: applicant-details.typ  proposed-soln-brief.typ  proposed-technical-solution.typ
(+129 files in other folders)
