[package]
name = "nodescraper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dom_smoothie = "0.17.0"
env_logger = "0.11.10"
futures-util = { version = "0.3.32", features = ["tokio-io"] }
log = "0.4.29"
prost = "0.14.3"
prost-types = "0.14.3"
dpi = "0.1"
euclid = "0.22"
rand = "0.10.1"
servo = "0.2.0"
servo-base = "0.2.0"
tokio = { version = "1.52.3", features = ["full", "macros"] }
tokio-tungstenite = { version = "0.29.0", features = ["url", "rustls-tls-native-roots"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
servo-allocator = { version = "0.2.0", default-features = false }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }

[build-dependencies]
prost-build = "0.14.3"

[profile.release]
lto = "thin"
